--- a/microSerGroupTransport/src/main/resources/application.properties
+++ b/microSerGroupTransport/src/main/resources/application.properties
@@ -6,8 +6,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.springframework=info
 
+springdoc.api-docs.path=/api-docs
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+
 
 
